--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,9 @@
-== README
+A trello-like todo list made with ruby on rails using the following gems:
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+gem 'twitter-bootstrap-rails'
+gem 'font-awesome-rails'
+gem 'simple_form'
+gem 'devise'
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+This application was made for learing purposes
+You can find the live version here: http://sheltered-crag-3123.herokuapp.com/
